@@ -1,3 +1,9 @@
+2023-01-13 Frederik Seiffert <frederik@algoriddim.com>
+
+	* Headers/Foundation/NSURLSession.h:
+	* Source/NSURLSession.m:
+	Add missing NSURLSession APIs.
+
 2022-02-09 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/Additions/GSMime.m: ([GSMimeHeader setValue:]) do not set
